<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robber Translator</string>
    <string name="ok">OK</string>
    <string name="placeholder">[PLACEHOLDER]</string>
    <string name="translateto">Translate to</string>
    <string name="translatefrom">Translate from</string>
    <string name="mainactivity_about">About</string>
    <string name="mainactivity_abouttext">The Robber Language is a Swedish language game. It became popular after the books about Kalle Blomkvist by Astrid Lindgren, where the children use it as a code, both at play and in solving actual crimes. The principle is easy enough. Every consonant (spelling matters, not pronunciation) is doubled, and an o is inserted in-between. Vowels are left intact.</string>
    <string name="mainactivity_quit">Quit</string>
    <string name="translateactivity_inputdescription_translatetorobber">Text to translate to Robber Language</string>
    <string name="translateactivity_inputdescription_translatefromrobber">Text to translate from Robber Language</string>
    <string name="translateactivity_translate">Translate</string>
    <string name="translateactivity_translatedtext">Translated text</string>
    <string name="translateactivity_noinput">There is nothing to translate!</string>
    <string name="contextmenu_translatedtext_clear">Clear</string>

</resources>
