<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:text="@string/app_name"
                android:textSize="30sp"/>
            
            <!-- Translate to -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translateto"
                android:onClick="onTranslateTo"/>
            
            <!-- Translate from -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translatefrom"
                android:onClick="onTranslateFrom"/>
            
            <!-- About -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainactivity_about"
                android:onClick="onAbout"/>
            
            <!-- Quit -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainactivity_quit"
                android:onClick="onQuit"/>
    
        </LinearLayout>
    </ScrollView>
</RelativeLayout>